--- a/FakeMMO/FakeMMO.html
+++ b/FakeMMO/FakeMMO.html
@@ -11,6 +11,7 @@
   <div id="header" >
     <h1 style="font-size: xx-large;">Codename: Fake MMO</h1>
     <p>I've been building a Fake MMO in Unity on my own - a project meant to simulate a AAA MMORPG in a single-player experience. <a href="https://rienuaa.itch.io/solaria/download/iI4jLkXlHyOy1zBreDqMDtqcD_lRjMc6nsRRLLlS" style="text-decoration: underline; color: blue;">Playable demo available here!</a></p>
+    <p>You can also <a href="https://store.steampowered.com/app/3976740/" style="text-decoration: underline; color: blue;">wishlist this game on Steam!</a></p>
     <p><a href="../index.html" style="text-decoration: underline; color: blue;">Return to Portfolio.</a></p>
   </div>
 
@@ -23,7 +24,7 @@
   <div class="MMO Sim">
     <div class="row">
       <div class="column1">
-        <a href = "MMOSimulation.png"><img src="MMOSimulation.png"></a>
+        <a href = "AreaObjective.png"><img src="AreaObjective.png"></a>
       </div>
       <div class="column2">
         <h2>Simulated Multiplayer</h2>
@@ -50,21 +51,6 @@
 
   <hr>
 
-  <div class="Advancement">
-    <div class="row">
-      <div class="column1">
-        <a href = Enhancements.png><img src="Enhancements.png"></a>
-      </div>
-      <div class="column2">
-        <h2>Advancement and Progression</h2>
-        <p>As you level up, you'll earn Enhancement Points, to be spent within your Enhancement Trees.</p>
-        <p>Enhancements can radically change your character's build. </p>
-      </div>
-    </div>
-  </div>
-
-  <hr>
-
   <div class="Hoverboards">
     <div class="row">
       <div class="column1">
@@ -83,7 +69,7 @@
   <div class="Character">
     <div class="row">
       <div class="column1">
-        <a href = MapExploration.png><img src="MapExploration.png"></a>
+        <a href = CharacterCreation.png><img src="CharacterCreation.png"></a>
       </div>
       <div class="column2">
         <h2>Character Appearance Modification</h2>
@@ -113,7 +99,7 @@
   <div class="World Map">
     <div class="row">
       <div class="column1">
-        <a href="FullMap.png"><img src="FullMap.png"></a>
+        <a href="GameWorld.png"><img src="GameWorld.png"></a>
       </div>
       <div class="column2">
         <h2>Map Exploration</h2>
