--- a/DDO/DDO.html
+++ b/DDO/DDO.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" type="image/bmp" href="../favicon.bmp"/>
   <link rel="stylesheet" href="../style/material-elements.css">
   <link rel="stylesheet" href="../main.css">
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="../main.js"></script>
   <script src="https://code.highcharts.com/highcharts.js"></script>
   <script src="https://code.highcharts.com/modules/accessibility.js"></script>
 </head>
