updated with new screenshots

--- a/FakeMMO/FakeMMO.html
+++ b/FakeMMO/FakeMMO.html
@@ -39,11 +39,11 @@
   <div class="Active Combat">
     <div class="row">
       <div class="column1">
-        <a href = "ActiveCombat.png"><img src="ActiveCombat.png"></a>
+        <a href = "Combat.png"><img src="Combat.png"></a>
       </div>
       <div class="column2">
         <h2>Active Combat</h2>
-        <p>Combat within this game is active - no hotbar, just click your mouse to attack. Every weapon type and combination has different animations.</p>
+        <p>Combat within this game is active, meaning you must aim projectiles and melee attacks. Every weapon type and combination has different animations and attack shapes.</p>
         <p>Enemies have different stats and attack patterns, and will wander their spawned locations automatically.</p>
       </div>
     </div>
@@ -99,12 +99,12 @@
   <div class="World Map">
     <div class="row">
       <div class="column1">
-        <a href="GameWorld.png"><img src="GameWorld.png"></a>
+        <a href="Explore.png"><img src="Explore.png"></a>
       </div>
       <div class="column2">
         <h2>Map Exploration</h2>
         <p>As you explore, you'll encounter Waypoints, Points of Interest, and Area Objectives, which will award you with XP.</p>
-        <p>Completing the entire map will take you through 6 distinct biomes - a green forest, a golden meadow, an enchanted glade, a dark castle, a bustling down, and an underground volcano, each with their own enemies and exploration points.</p>
+        <p>Completing the entire map will take you through distinct biomes and sub-biomes, such as beaches, rivers, forests, grasslands, ruins, and a mysterious castle.</p>
       </div>
     </div>
   </div>
