--- a/FakeMMO/FakeMMO.html
+++ b/FakeMMO/FakeMMO.html
@@ -10,7 +10,7 @@
 <body>
   <div id="header" >
     <h1 style="font-size: xx-large;">Codename: Fake MMO</h1>
-    <p>I've been building a Fake MMO in Unity on my own - a project meant to simulate a AAA MMORPG in a single-player experience. <a href="https://rienuaa.itch.io/solaria/download/iI4jLkXlHyOy1zBreDqMDtqcD_lRjMc6nsRRLLlS" style="text-decoration: underline; color: blue;">Playable demo available here!</a></p>
+    <p>I've been building a Fake MMO in Unity on my own - a project meant to simulate a AAA MMORPG in a single-player experience. </p>
     <p>You can also <a href="https://store.steampowered.com/app/3976740/" style="text-decoration: underline; color: blue;">wishlist this game on Steam!</a></p>
     <p><a href="../index.html" style="text-decoration: underline; color: blue;">Return to Portfolio.</a></p>
   </div>
